# plancraft

./: .dockerignore  .env.draft  .gitignore  Dockerfile  KUBERNETES.md  MANIFEST.in  README.md  TODO.md  analysis.ipynb  apt.txt  baseline_llm.py  baselines.py  curriculum.py  dep.py  embed.ipynb  entrypoint.sh  exps.sh  generate_fewshot_imgs.py  generate_oa.ipynb  generate_ota.py  image_encoder.ipynb  image_encoder.py  launch.py  launch.yaml  main.py  mp_test.py  multimodal.py  notebook.ipynb  oracle.py  planner.py  prompts.py  pyproject.toml  rcnn_test.ipynb  requirements.docker.txt  requirements.txt  test_env.py  test_kube.py  test_models.py  text_env.py  token-healing.ipynb  (+4 more)
.devcontainer/: devcontainer.json
.github/workflows/: publish.yaml  test.yaml
analysis/: calculate_results_table.py  create_dataset.py  dataset.ipynb  generate_oa.ipynb  metrics.ipynb  wandb.ipynb
configs/: base.yaml  dep.yaml  eval.yaml  train.yaml
configs/evals/: dummy.yaml  gemma12b.yaml  gemma27b.yaml  gpt4o_mini.yaml  llama70B.yaml  llama8B.yaml  llama8B_FT.yaml  llama8B_ft.yaml  oracle.yaml  qwen3.yaml  qwen72BVL.yaml
configs/text-env/: base.yaml
configs/text-evals/: act_eval_gpt4o_mini_few_shot.yaml  act_eval_llama70B_few_shot.yaml  act_eval_llama8b_few_shot.yaml  act_eval_llama8b_lora.yaml  act_eval_llama8b_zero_shot.yaml  dummy.yaml  oracle.yaml  react_eval_gpt4o_mini_few_shot.yaml  react_eval_llama70b_few_shot.yaml  react_eval_llama8b_few_shot.yaml  react_eval_llama8b_lora.yaml  react_eval_llama8b_zero_shot.yaml
configs/text-train/: act_train_llama_8b_lora.yaml  react_train_llama_8b_lora.yaml
data/: deps_prompt.jsonl  deps_prompt.txt  generation_results.json  goal_lib.json  goal_mapping.json  react_results.json  results.json  results_db.json  task_prompt.json  task_prompt.txt  test.json  test.small.easy.json  test.small.json  train.json  val.json  val.small.easy.json  val.small.json
data/oracle/: train.mm.jsonl  val.mm.jsonl
docker/: Dockerfile  requirements.txt
docs/: index.html
models/: craft_model.py  goal_model.py  mine_model.py  utils.py
models/mineclip/: clip.py  tokenization.py
oracle_trajectories/train/oa/: TRAIN0001.json  TRAIN0002.json  TRAIN0004.json  TRAIN0015.json  TRAIN0016.json  TRAIN0018.json  TRAIN0019.json  TRAIN0021.json  TRAIN0023.json  TRAIN0024.json  TRAIN0025.json  TRAIN0026.json  TRAIN0030.json  TRAIN0034.json  TRAIN0036.json  TRAIN0037.json  TRAIN0038.json  TRAIN0047.json  TRAIN0051.json  TRAIN0052.json  TRAIN0053.json  TRAIN0054.json  TRAIN0062.json  TRAIN0064.json  TRAIN0069.json  TRAIN0070.json  TRAIN0072.json  TRAIN0074.json  TRAIN0076.json  TRAIN0078.json  TRAIN0079.json  TRAIN0081.json  TRAIN0083.json  (+503 more)
plancraft/: baselines.py  config.py  dep.py  evaluator.py  generate_dataset.py  llms.py  mcp.py  models.py  oracle.py  prompts.py  simple.py  utils.py
plancraft/data/: test.curriculum.json  test.json  test.small.easy.json  test.small.json  train.curriculum.json  train.json  val.curriculum.json  val.json  val.repeated.json  val.small.easy.json  val.small.json
plancraft/environment/: __init__.py  actions.py  env.py  planner.py  prompts.py  recipes.py  sampler.py  search.py
plancraft/environments/: actions.py  env.py  env_real.py  env_symbolic.py  img_symb.py  items.py  planner.py  recipes.py  sampler.py
plancraft/models/: __init__.py  act.py  act_tools.py  base.py  bbox_model.py  dummy.py  generators.py  mine_model.py  oam.py  oracle.py  prompts.py  react.py  react_prompts.py  react_v2.py  search.py  tools.py  utils.py
plancraft/templates/: phi-instruct.jinja
plancraft/train/: dataset.py  train.py  train_fast_rcnn.py
sim/: Dockerfile  README.md  requirements.txt
tests/: env.py  test_env.py  test_evaluator.py  test_planner.py  test_real_env.py  test_recipes.py  test_sampler.py  test_symbolic_env.py  test_wrapper.py
(+7218 files in other folders)
