[project]
name = "plancraft"
version = "0.1.1"
description = "Plancraft: an evaluation dataset for planning with LLM agents"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "accelerate>=1.0.1",
    "coloredlogs>=10.0",
    "daemoniker>=0.2.3",
    "datasets>=3.0.2",
    "dill>=0.3.1.1",
    "einops>=0.8.0",
    "flaky>=3.8.1",
    "hf-transfer>=0.1.8",
    "huggingface-hub>=0.26.1",
    "hydra-core>=1.3.2",
    "imagehash>=4.0.0",
    "imageio>=2.36.0",
    "inflection>=0.3.1",
    "ipython>=7.5.0",
    "jinja2>=2.11.2",
    "loguru>=0.7.2",
    "lxml>=4.3.3",
    "matplotlib>=3.9.2",
    "networkx>=3.2.1",
    "numpy>=1.16.2,<1.24",
    "openai>=1.52.2",
    "opencv-python>=4.1.0.25",
    "pandas>=2.1.0",
    "peft>=0.13.2",
    "pillow>=8.0.0",
    "psutil>=5.6.2",
    "pydantic>=2.9.2",
    "pyglet>=2.0.18",
    "pyro4>=4.76",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "requests>=2.20.0",
    "seaborn>=0.13.2",
    "setuptools>=49.2.0",
    "tinydb>=4.8.2",
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "tqdm>=4.32.2",
    "transformers>=4.43.3",
    "typing>=3.6.6",
    "wandb>=0.18.5",
    "xmltodict==0.12.0",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "jupyterlab>=4.2.5",
    "pytest>=8.3.3",
    "ruff>=0.7.1",
    "uv>=0.4.25",
]

[tool.setuptools.packages]
find = { where = ["plancraft"], include = ["plancraft*"] }

[project.optional-dependencies]
full = [
    "gym>=0.19.0,<=0.23.1",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
