[project]
name = "plancraft"
version = "0.1.4"
description = "Plancraft: an evaluation dataset for planning with LLM agents"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "hydra-core>=1.3.2",
    "imageio>=2.36.0",
    "loguru>=0.7.2",
    "networkx>=3.2.1",
    "numpy>=1.16.2,<1.24",
    "openai>=1.52.2",
    "pandas>=2.1.0",
    "pillow>=8.0.0",
    "pydantic>=2.9.2",
    "python-dotenv>=1.0.1",
    "setuptools>=49.2.0",
    "tqdm>=4.32.2",
    "wandb>=0.18.5",
    "xmltodict==0.12.0",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "jupyterlab>=4.2.5",
    "pytest>=8.3.3",
    "ruff>=0.7.1",
    "uv>=0.4.25",
]

[project.optional-dependencies]
full = [
    "hf-transfer>=0.1.8",
    "ipython>=7.5.0",
    "matplotlib>=3.9.2",
    "seaborn>=0.13.2",
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "transformers>=4.43.3",
    "accelerate>=1.0.1",
    "peft>=0.13.2",
    "einops>=0.8.0",
    "huggingface-hub>=0.26.1",
]

[tool.setuptools.package-dir]
plancraft = "plancraft"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
