[project]
name = "plancraft"
version = "0.3.11"
description = "Plancraft: an evaluation dataset for planning with LLM agents"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}

dependencies = [
    "hydra-core>=1.3.2",
    "imageio>=2.36.0",
    "loguru",
    "networkx",
    "openai",
    "pandas",
    "pillow>=8.0.0",
    "pydantic",
    "setuptools",
    "tqdm",
    "wandb",
    "numpy",
    "pydantic-settings>=2.6.1",
    "scikit-learn>=1.6.0",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "ipython>=7.5.0",
    "jupyterlab>=4.2.5",
    "pytest>=8.3.3",
    "ruff>=0.7.1",
    "uv>=0.4.25",
]

[project.optional-dependencies]
full = [
    "hf-transfer",
    "matplotlib",
    "seaborn",
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "transformers>=4.43.3",
    "accelerate",
    "peft",
    "einops",
    "huggingface-hub",
]

[tool.setuptools.package-dir]
plancraft = "plancraft"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
